--- a/index.html
+++ b/index.html
@@ -4,75 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BIRAI - Fullstack Developer</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Hello, I’m BIRAI</h1>
-        <h2>I’m a Fullstack Developer</h2>
+        <div class="logo">BIRAI</div>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Project</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <div class="container">
-        <div class="about">
-            <img src="./image/Group 1.png" alt="">
-            <h3>About Me</h3>
-            <p>Hello! I'm BIRAI, a passionate Fullstack Developer dedicated to building modern, scalable, and user-friendly web applications. With expertise in both frontend and backend development, I craft seamless digital experiences driven by innovation and performance.</p>
-            <a class="button" href="#">Download CV</a>
-        </div>
+    <section class="hero">
+        <h1>Hello <br> I'm BIRAI <br> I'm Fullstack Developer</h1>
+        <img src="image/abi.png" alt="Avatar">
+    </section>
 
-        <div class="skills">
-            <div class="skill">
-                <img src="./image/html.png" alt=""style="width: 200px; height: auto;">
-                <h3>HTML</h3>
-                <p>90%</p>
-            </div>
-            <div class="skill">
-                <img src="./image/pngegg (1) 1.png" alt=""style="width: 200px; height: auto;">
-                <h3>JavaScript</h3>
-                <p>90%</p>
-            </div>
-            <div class="skill">
-                <img src="./image/css.png" alt=""style="width: 200px; height: auto;">
-                <h3>CSS</h3>
-                <p>90%</p>
-            </div>
-        </div>
+    <section class="about">
+        <h2>About me</h2>
+        <p>Hello! I'm Birlai Birai, a passionate Fullstack Developer dedicated to building modern, scalable, and user-friendly web applications.</p>
+        <button onclick="window.location.href='cv.pdf'">Download CV</button>
+    </section>
 
-        <div class="projects">
-            <h3>Last Projects</h3>
-            <div>
-                <img src="./image/pngegg (2).png" alt=""style="width: 200px; height: auto;">
-                <h4>Culture Web</h4>
-                <a class="button" href="#">View</a>
-            </div>
-            <div>
-                <img src="./image/pngegg (3).png" alt=""style="width: 200px; height: auto;">
-                <h4>Cinta Lingkungan Web</h4>
-                <a class="button" href="#">View</a>
-            </div>
+    <section class="skills">
+        <h2>Skill and Tools</h2>
+        <div class="skill-icons">
+            <img src="image/html.png" alt="HTML">
+            <img src="image/js.png" alt="JavaScript">
+            <img src="image/css.png" alt="CSS">
         </div>
+    </section>
 
-        <div class="testimonials">
-            <h3>What Do They Say About Me</h3>
-            <div class="testimonial">
-                <img src="./image/Ellipse 3.png" alt="">
-                <h4>Wirra</h4>
-                <p>“BIRAI has been the best designer I have worked with. The UI designs he created were top-notch.”</p>
-            </div>
+    <section class="projects">
+        <h2>Last Project</h2>
+        <div class="project-item">
+            <img src="image/wayang.png" width="150">
+            <h3>Culture Web</h3>
+            <button>View</button>
         </div>
-
-        <div class="services">
-            <h3>Services</h3>
-            <p>I am here to help you solve various website and application problems.</p>
+        <div class="project-item">
+            <img src="image/daun.png" width="150">
+            <h3>Cinta Lingkungan Web</h3>
+            <button>View</button>
         </div>
-    </div>
+    </section>
 
     <footer>
-        <p>&copy; 2025 BIRAI</p>
-        <p>Contact: 0878-1237-0903 | email: birai@gmail.com</p>
-        <p>Address: Jl. Simpang No. 47</p>
+        <p>&copy; 2025 - Birai</p>
     </footer>
 </body>
 </html>
