--- a/index.html
+++ b/index.html
@@ -4,7 +4,114 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BIRAI - Fullstack Developer</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #1A2C32;
+            color: white;
+        }
+
+        header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 20px 50px;
+            background-color: #1A2C32;
+        }
+
+        .logo {
+            font-size: 24px;
+            font-weight: bold;
+        }
+
+        nav {
+            flex-grow: 1;
+            display: flex;
+            justify-content: flex-end;
+        }
+
+        nav ul {
+            list-style: none;
+            display: flex;
+            gap: 20px;
+            margin: 0;
+            padding: 0;
+        }
+
+        nav ul li {
+            display: inline;
+        }
+
+        nav ul li a {
+            color: white;
+            text-decoration: none;
+        }
+
+        nav ul li a:hover {
+            color: #ff6600;
+        }
+
+        .hero {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 60px;
+            padding: 100px 10%;
+            text-align: left;
+        }
+
+        .hero h1 {
+            font-size: 42px;
+            line-height: 1.5;
+            flex: 1;
+            max-width: 50%;
+        }
+
+        .hero img {
+            width: 200px;
+            height: auto;
+            border-radius: 10px;
+        }
+
+        .about, .skills, .projects {
+            text-align: center;
+            padding: 40px;
+        }
+
+        .skill-icons img {
+            width: 80px;
+            margin: 10px;
+        }
+
+        .projects .project-item {
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #1b263b;
+            width: 80%;
+            border-radius: 10px;
+        }
+
+        button {
+            background-color: #ff6600;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+
+        button:hover {
+            background-color: #e65c00;
+        }
+
+        footer {
+            text-align: center;
+            padding: 20px;
+            background-color: #1b263b;
+        }
+    </style>
 </head>
 <body>
     <header>
